--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-const host = import.meta.env.VITE_API_URL || 'http://unknown-api-url.com';
+DATABASE_URL="postgresql://livius@localhost:5432/postgres"
+# frontend/.env
+VITE_API_URL=http://localhost:3000
