--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "nodemon npm start",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "npm install && npx prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -14,6 +16,6 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "prisma": "^7.1.0"
+    "prisma": "^6.19.1"
   }
 }
