Add React Hook Form for better form handling

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://livius@localhost:5432/postgres"
 # frontend/.env
 VITE_API_URL=http://localhost:3000
+DATABASE_URL="postgresql://livius@localhost:5432/expenso?schema=public"
